fixed individual majors cta button outline color and updated npm mods

--- a/dev/scss/_majors-schools.scss
+++ b/dev/scss/_majors-schools.scss
@@ -499,8 +499,8 @@ $education: lighten($color-campusGold, 35);
 .single-major-cta a {
 	display: inline-block;
     padding: 20px 30px;
-    border: 1px solid #ccc;
-    outline: #dedede;
+    border: 1px solid #666;
+    outline: #666;
     margin: 10px 15px 10px 0;
 	color: #000!important;
 }
