--- a/prod/css/main.css
+++ b/prod/css/main.css
@@ -14508,8 +14508,8 @@ Media Queries
 .single-major-cta a {
   display: inline-block;
   padding: 20px 30px;
-  border: 1px solid #ccc;
-  outline: #dedede;
+  border: 1px solid #666;
+  outline: #666;
   margin: 10px 15px 10px 0;
   color: #000 !important;
 }
