--- a/prod/css/main.css
+++ b/prod/css/main.css
@@ -12190,9 +12190,6 @@ Media Queries
   .main-content .jumbotron {
     padding: 1rem;
   }
-  .modal-content {
-    font-size: 70%;
-  }
   .tab-pane {
     padding: 10px;
   }
@@ -14688,6 +14685,10 @@ Media Queries
   opacity: 1 !important;
 }
 
+.no-js #faq-squares {
+  display: none;
+}
+
 .no-js .hide-no-js {
   display: none !important;
 }
@@ -14707,7 +14708,47 @@ Media Queries
   display: none;
 }
 
+.no-js #purdue-example .carousel-text-item:first-child {
+  display: block;
+  position: static;
+  opacity: 1;
+}
+
+.no-js #purdue-example .carousel-text-wrap {
+  margin-bottom: 15px;
+}
+
+.no-js #purdue-example .interactive-exampleP {
+  position: static;
+  height: auto;
+}
+
+.no-js #purdue-example .prev,
+.no-js #purdue-example .next,
+.no-js #purdue-example .faq-rank-nav,
+.no-js #purdue-example .closeXP {
+  display: none;
+}
+
 .no-js .tab-pane {
   position: static !important;
   display: block !important;
+}
+
+.no-js .home #majors #school,
+.no-js .home #majors #interest,
+.no-js #no-match-note,
+.no-js #social {
+  display: none !important;
+}
+
+.no-js .virtualtour_embed {
+  display: block;
+  background-color: #555;
+  padding: 20px;
+  color: #fff;
+  text-align: center;
+  font-weight: bold;
+  font-size: 1.2em;
+  margin-bottom: 5px;
 }
