--- a/dev/partials/_head.html
+++ b/dev/partials/_head.html
@@ -16,6 +16,6 @@
 
     <link rel="stylesheet" text="text/css" href="css/main.css" />
     
-    <link href="https://fonts.googleapis.com/css?family=Archivo+Narrow:400,700" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Archivo+Narrow:400,700" rel="stylesheet">
     
 </head>
