--- a/dev/scss/_layout.scss
+++ b/dev/scss/_layout.scss
@@ -3,10 +3,16 @@
     box-sizing: border-box;
 }
 body {
-	color: #ddd;
-	background-color: #000;
+	color: #111;
+	background-color: #fff;
 	
+	&.dark-bg, 
+	&.light-bg {
+		color: #ddd;
+		background-color: #000;
+	}
 }
+	
 blockquote {
 	position: relative;
     border: none!important;
