--- a/dev/partials/_careers-jumbotron.html
+++ b/dev/partials/_careers-jumbotron.html
@@ -33,7 +33,7 @@
 			<!-- Put css in individual page for this video to be     -->
 			<!-- responsive, since only used like this on one page   -->
 			<!-- =================================================== -->
-			<iframe width="100%" height="180" src="https://www.youtube.com/embed/RgQ5m2xV7t4" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+			<iframe class="j-side" width="100%" height="170" src="https://www.youtube.com/embed/RgQ5m2xV7t4" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 
 		</div>
 	</div>
