--- a/dev/partials/_footer-sidebar.html
+++ b/dev/partials/_footer-sidebar.html
@@ -1,9 +1,9 @@
- <section id="footer-sidebar">
+<section id="footer-sidebar">
     <div class="container">
 	<a id="side-menu-btn"><i class="fa fa-bars"></i></a>
 
 	<ul id="sidenav" class="nav nav-pills flex-column">
-	  <li class="active"><a style="text-transform: uppercase;color:#ddd" href="#">Section Home</a></li>
+	  <li class="top-level"><a href="#">Section Home</a></li>
 	  <li><a class="" href="#">Sub Menu Item</a></li>
 	  <li><a class="active" href="#">Current Page</a></li>
 	  <li><a class="" href="#">Sub Menu Item</a></li>
