--- a/dev/partials/_footer.html
+++ b/dev/partials/_footer.html
@@ -73,7 +73,7 @@
 				</div>
 			</div>
 			<div class="motto">
-				<img alt="We are Purdue. What we make moves the world forward." class="horizontal" src="https://www.purdue.edu/purdue/images/templateElements/2015/footer-mottoHorizontal.png"/> <img alt="We are Purdue. What we make moves the world forward." class="vertical" src="https://www.purdue.edu/purdue/images/templateElements/2015/footer-mottoVertical.png"/> 
+				<img style="margin-top: 20px" alt="150 Years of Giant Leaps. Purdue University." class="horizontal" src="images/footer-logo-horizontal.png"/> <img alt="150 Years of Giant Leaps. Purdue University." class="vertical" src="images/footer-logo-vertical.png"/>
 				
 				<a title="Facebook" href="http://www.facebook.com/PurdueAdmissions" target="_blank">
 					<i class="fab fa-facebook-f"></i></a> 
