--- a/dev/scss/_colors.scss
+++ b/dev/scss/_colors.scss
@@ -36,6 +36,9 @@
 .gold-text {
 	color: $color-campusGold;
 }
+.gold-header-text {
+	color: $color-headlineGold;
+}
 .gray {
 	background-color: $color-coalGray;
 }
