--- a/dev/partials/_home-slidesJS.html
+++ b/dev/partials/_home-slidesJS.html
@@ -1,11 +1,23 @@
 <script>
 
 	var slideIndex = [1,1,1,1,1,1,1,1,1,1];
-	var slideId = ['clssrm','sL','atmo','rsch','tech','Ocamp','spprt','opp','cmps','ath']
+	var slideId = [
+		'clssrm',
+		'sL',
+		'atmo',
+		'rsch',
+		'tech',
+		'Ocamp',
+		'spprt',
+		'opp',
+		'cmps',
+		'ath',
+	]
 	
 
 	// Next/previous controls
 	function plusSlides(n, c) {
+		console.log(n,c);
 	  showSlides(slideIndex[c] += n, c);
 	}
 
@@ -13,6 +25,7 @@
 	function showSlides(n, c) {
 	  var i;
 	  var slides = document.getElementsByClassName(slideId[c]);
+		console.log(slides);
 	  if (n > slides.length) {slideIndex[c] = 1} 
 	  if (n < 1) {slideIndex[c] = slides.length}
 	  for (i = 0; i < slides.length; i++) {
