--- a/dev/partials/_img-panel.html
+++ b/dev/partials/_img-panel.html
@@ -6,8 +6,8 @@
 		<p>Brussels sprout coriander water chestnut gourd swiss chard wakame kohlrabi beetroot carrot watercress. Corn amaranth salsify bunya nuts nori azuki bean chickweed potato bell pepper artichoke.</p>
 		<p>Turnip greens yarrow ricebean rutabaga endive cauliflower sea lettuce kohlrabi amaranth water spinach avocado daikon napa cabbage asparagus winter purslane kale. Celery potato scallion desert raisin horseradish spinach carrot soko. Lotus root water spinach fennel kombu maize bamboo shoot green bean swiss chard seakale pumpkin onion chickpea gram corn pea. </p>
 	</div>
-	<div class="panel-image" >
-		<img src="../images/Female-Latino-student-performing.jpg" alt="">
+	<div class="panel-image" style="background: transparent url('images/Female-Latino-student-performing.jpg') center no-repeat;">
+		<img src="images/Female-Latino-student-performing.jpg" alt="">
 	</div>
 </div>
 </div>
