--- a/dev/scss/_text.scss
+++ b/dev/scss/_text.scss
@@ -44,6 +44,13 @@ h6 {
 	margin-top: 1em;
 	line-height: 1.1;
 	margin-bottom: .3em;
+	
+	strong, b {
+		font-weight: normal!important;
+		strong, b {
+			font-weight: normal!important;
+		}
+	}
 }
 h1 {
 	font-size: 2.25em;
